apps/gitea/gitea-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-postgres
  namespace: gitea
spec:
  selector:
    app: gitea-postgres
  ports:
    - port: 5432
      targetPort: 5432
