apps/gitea/forgejo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  namespace: gitea
  annotations:
    th3borg.org/apps-name: "Forgejo"
    th3borg.org/apps-healthcheck: "/-/health"
    th3borg.org/apps-category: "dev"
    th3borg.org/apps-tier: "core"
    nginx.org/client-max-body-size: "512m"
    nginx.org/proxy-request-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: gitea.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
