apps/gitea/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    th3borg.org/apps-healthcheck: "/-/health"
    th3borg.org/apps-category: "dev"
    th3borg.org/apps-tier: "core"
    nginx.org/client-max-body-size: "512m"
    nginx.org/proxy-request-buffering: "off"
    nginx.org/location-snippets: |
      auth_request /authelia;
      auth_request_set $target_url https://$http_host$request_uri;
      auth_request_set $redirection_url $upstream_http_location;
      auth_request_set $user $upstream_http_remote_user;
      auth_request_set $groups $upstream_http_remote_groups;
      error_page 401 @authelia_redirect;
    nginx.org/server-snippets: |
      location = /authelia {
        internal;
        proxy_pass http://authelia.authelia.svc.cluster.local:9091/api/authz/auth-request;
        proxy_set_header X-Original-Method $request_method;
        proxy_set_header X-Original-URL https://$http_host$request_uri;
        proxy_set_header X-Forwarded-Method $request_method;
        proxy_set_header X-Forwarded-Proto https;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-URI $request_uri;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header Content-Length "";
        proxy_set_header Connection "";
        proxy_pass_request_body off;
      }
      location @authelia_redirect {
        return 302 $redirection_url;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: gitea.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
